# Ai_for_global_healthcare_access

./: .env.example  .gitignore  README.md  Taskfile.yml  app.yaml  main.py  package.json  pyproject.toml  requirements.txt  run_ingest.py  run_parser.py
api/: crud_router.py  idp_router.py  schemas.py  server.py
documentation/: Ingest-walkthrough.md  Question Reference.md  Theme - Ai for global healthcare access.md  sql-integration-guide.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/map/: living-map.tsx
frontend/src/components/minimal/: chat-panel.tsx  insights-drawer.tsx  minimal-dashboard.tsx  plan-drawer.tsx  slide-panel.tsx
frontend/src/components/providers/: app-providers.tsx  theme-provider.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  input.tsx  scroll-area.tsx
frontend/src/lib/: agent.ts
frontend/src/lib/map-data/: desert-metrics.ts  geo.ts  ghana-border.ts
frontend/src/types/: index.ts
ghana_dataset/: Virtue Foundation Ghana Dataset.md  health.db
healthsync-app/: package-lock.json  package.json  tailwind.config.ts
healthsync-app/.lovable/: plan.md
healthsync-app/src/: App.tsx  index.css
healthsync-app/src/components/: AppLayout.tsx  AppSidebar.tsx  OrganizationFormDialog.tsx  PromptOrganizationDialog.tsx
healthsync-app/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  table.tsx  textarea.tsx
healthsync-app/src/contexts/: AppContext.tsx
healthsync-app/src/i18n/: LanguageContext.tsx  translations.ts
healthsync-app/src/pages/: ActivityLogs.tsx  BulkUpload.tsx  Dashboard.tsx  DatabaseView.tsx  FacilitySettings.tsx  Verification.tsx
map/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
map/app/: globals.css  layout.tsx  page.tsx
map/app/components/: ChatPanel.tsx  CoverageInfoCard.tsx  FacilitiesPanel.tsx  LayerPanel.tsx  MapView.tsx  SearchBar.tsx  Sidebar.tsx
map/types/: index.ts  leaflet-plugins.d.ts
prompts_and_pydantic_models/: Prompts and pydantic models used to create the data.md
schema/: 001_initial.sql  001_sqlite.sql
scripts/: prepare_map_data.py  run_ingest.py  test_query.py
src/: __init__.py  config.py  graph.py  graph_lite.py  llm.py  state.py
src/datacleaning/: __init__.py  api.py  api_errors.py  config.py  db.py  embedding_store.py  geocode.py  identity_embedding.py  merge_agent.py  models.py  parser.py  pipeline.py
src/idp/: __init__.py  engine.py
src/nodes/: __init__.py  external_data_agent.py  geospatial_agent.py  intent_classifier.py  medical_reasoner.py  quality_gate.py  query_planner.py  synthesizer.py  text2sql_agent.py  vector_search_agent.py
src/planning/: __init__.py  engine.py  prompts.py
src/tools/: __init__.py  geocoding.py  medical_hierarchy.py  sql_executor.py  vector_search.py
virtue-dashboard/: .eslintrc.js  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
virtue-dashboard/public/data/: mock-facilities.json
virtue-dashboard/src/app/: globals.css  layout.tsx
virtue-dashboard/src/app/dashboard/: page.tsx
virtue-dashboard/src/components/dashboard/: command-bar.tsx  dashboard-page.tsx  facility-detail-drawer.tsx  metrics-strip.tsx  (+2 more)
virtue-dashboard/src/hooks/: use-facilities-data.ts
virtue-dashboard/src/lib/: agent.ts  data-loader.ts  insights.ts  utils.ts
(+23 files in other folders)
